# FZQ-AI

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_OVERVIEW.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_DUPLICATION_AUDIT_REPORT.md  DELETION_GUIDE.md  Dockerfile  Git 清理和Push Files.txt  Makefile  README.md  README_legacy.md  ROADMAP.md  USAGE_GUIDE.md  VERSION  VERSION.txt  _fix_registry.py  _test_wl.json  _webapp_lines.txt  api_server.py  app.py  app_legacy.py  check_prompts.py  ci_health_check.py  clean_frontend_audit.ps1  clean_v17.ps1  cleanup_project.py  config.json  docker-compose.yml  fix_utcnow.py  frontend_clean_report_20260703_074318.txt  fzqai_metrics.jsonl  fzqai_token_log.jsonl  main.py  nick_tui.py  pack.ps1  package-lock.json  (+23 more)
.github/workflows/: daily-report.yml  python.yml
FZQ-AI/: FZQ_AI_Daily_Run.xml  api_server.py  main.py  project_structure_clean.txt  requirements.txt  run_agent_demo.py  tree.txt  ui_app.py
FZQ-AI/build_engine/: file_writer.py  plan_renderer.py  target_blueprint.py
FZQ-AI/data/: sources.py
FZQ-AI/fzq_ai/: agent_hub.py
FZQ-AI/pipelines/: news_pipeline.py  reuters_fetcher.py  risk_scorer.py  summarizer.py
FZQ-AI/services/: llm_client.py
FZQ-AI/tests/: test_all.py
FZQ-AI/tools/: self_test_report.json
FZQ-AI/tui/: news_view.py
FZQ-AI/ui/: dashboard_stub.py
agents/: fzq_agent.py
app/: __init__.py  entry_adapter.py  web_app.py
archive/ui_backup/: __init__.py  debug_console.py  theme.py
build_engine/: file_writer.py  plan_builder.py  plan_renderer.py  project_scanner.py  skeleton_writer.py  target_blueprint.py  workflow_engine.py
configs/: zh_tasks.yaml
core/: __init__.py  intent_engine.py  model_router.py  pipelines.py  task_router.py  theme.py
core/pipelines/: __init__.py  base.py  zh_multisource_merge_pipeline.py  zh_opinion_landscape_pipeline.py  zh_policy_brief_pipeline.py
data/: fzq_ai_intel.db-shm  fzq_ai_intel.db-wal
data/cache/: summary_cache.json
data/logs/: fzqai_metrics.jsonl  fzqai_token_log.jsonl
docs/: API_GUIDE.md  ARCHITECTURE_OVERVIEW.md  DATA_FLOW_PIPELINES.md  DEEPSEEK_AUDIT_REPORT.md  DEEPSEEK_AUDIT_TASKS.md  DEEPSEEK_PROMPTS.md  DEEPSEEK_STRUCT_OPTIMIZER_SPEC.md  DEEPSEEK_V93_DELIVERY_REPORT.md  ENTRY_FLOW.md  ENTRY_PROTOCOL.md  ENTRY_SCHEMA.md  FZQ_AI_FULL_AUDIT_REPORT.md  GLM52_AUDIT_REPORT.md  KIMI_AUDIT_INTERPRETATION_LAYER.md  KIMI_DOC_AUDIT_REPORT.md  LLM_CALL_GRAPH.md  METRICS_AND_OBSERVABILITY.md  MINIMAX_PHASE2_STRUCTURAL_FEEDBACK.md  MINIMAX_STRICT_SCHEMA_VALIDATOR.md  MODULE_DEPENDENCIES.md  NEWS_INTAKE_SYSTEM.md  PROMPT_SYSTEM.md  README.md  REGION_LANGUAGE_LOGIC.md  SCHEMAS_MAP.md  V24_PROFESSIONAL_POLISH_AUDIT.md  actionable_suggestions.md  audit_report.md  glossary.md  minimax_alignment_report.md
entry/: __init__.py  entry_service.py  entry_service_v23.py
examples/: kimi_interpreter_demo.py  kimi_interpreter_demo_output.md
frontend/: dashboard.html  index.html  styles.css
frontend-react/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
fzq_ai/: __init__.py  agent_hub.py  config.py
orchestrator/: task_orchestrator.py
pipelines/: narrative_pipeline.py  news_pipeline.py  reuters_fetcher.py  risk_scorer.py  sentiment_pipeline.py  summarizer.py
prompts/: daily_report.jinja2  narrative_analysis.jinja2  risk_analysis.jinja2  scenario_analysis.jinja2  sentiment_analysis.jinja2
schemas/: pipeline_outputs.py
services/: llm_client.py
static/: theme.css
templates/: index.html
tests/: conftest.py  test_agents.py  test_api.py  test_autonomy_agent.py  test_base_agent.py  test_civilization.py  test_civilization_r2.py  test_core.py  test_deepseek_api.py  test_domain_models.py  test_doubao.py  test_enhanced_features.py  test_entry_layer_v17.py  test_formatter.py  test_fzq_ai_pipelines.py  test_glm_extractor.py  test_governance.py  test_kimi_interpreter.py  test_kimi_interpreter_feedback.py  test_llm_router.py  test_major_event_detector.py  test_minimax.py  test_minimax_feedback_loop.py  test_minimax_integration.py  test_minimax_phase2.py  test_narrative_shift.py  test_news_center_civ.py  test_news_pipeline.py  test_orchestrator.py  test_phase3_architecture.py  test_pipelines.py  test_pipelines_real.py  test_scenarios.py  test_schemas.py  test_storage_intel_store.py  test_v25_features.py
tests_old/: test_phase3_architecture.py  test_risk_forecast.py
tools/: _convert_to_utf8.py  _encoding_check.py  check_glm_zh_pipelines.py  debug_merge.py  manual_query.py  runtime_health_check_v13.py  test_merge.py
tui/: dashboard.py  news_view.py
ui/: __init__.py  dashboard.py  ui_app.py
venv-fastapi/: pyvenv.cfg
venv-streamlit/: pyvenv.cfg
(+673 files in other folders)
