[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fzq_ai_agent"
version = "24.3.6"
description = "FZQ-AI Multi-Model Intelligence Analysis System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.7,<3.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "requests>=2.32.0",
    "aiohttp>=3.9.0",
    "feedparser>=6.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "google-genai>=0.1.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "networkx>=3.3",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "langdetect>=1.0.9",
    "redis>=5.0.0",
    "jinja2>=3.1.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit[toml]>=1.7.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/yourname/FZQ-AI"

# ============================================================
# Setuptools — runtime resource files inside src/fzq_ai
# (prompts/zh/*.txt, prompts/system/*.txt, config/*.yaml, manifest.json, ...)
# ============================================================
[tool.setuptools.package-data]
fzq_ai = ["**/*.yaml", "**/*.txt", "**/*.j2", "**/*.json"]

# ============================================================
# Black
# ============================================================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | __pycache__
)/
'''

# ============================================================
# Ruff
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = ["fzq_ai"]

# ============================================================
# mypy
# ============================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

# ============================================================
# pytest
# ============================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:feedparser.*",
]

# ============================================================
# Coverage
# ============================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/test_adapter/*",
    "*/real/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 30

# ============================================================
# Bandit
# ============================================================
[tool.bandit]
exclude_dirs = ["tests", "__pycache__"]
skips = ["B101"]  # skip assert_used warnings in non-test code

# ============================================================
# Pyright / VS Code Python Analysis
# ============================================================
[tool.pyright]
extraPaths = ["./src"]
